# grocery-inventory

./: README.md  auth.py  database.py  helpers.py  main.py  models.py  pyproject.toml
menus/: __init__.py  auth_menu.py
services/: auth.py
